# Gemini

./: .env  .gitignore  .ssh.sh  CHANGELOG.md  Dockerfile  LICENSE  README.md  apple.sh  docker-compose.yml  drogas.md  gemini.md  gemx.sh  others.json  requirements-dev.txt  requirements.txt  setup.py
.meta/: gemini.md
Gemini_v2/: .dockerignore  DOCKER.md  Makefile  docker-compose.yml  doctor.sh  gemini.md  gemx-stats.sh  gemx.sh  roadmap.md  setup.sh
Gemini_v2/automations/: broncoespasmo_seco.yaml  ira_algoritmo.yaml  sepse_bundle.yaml  ventilacao_mecanica.yaml
Gemini_v2/gemx_frontend/: .env.local  Dockerfile  Dockerfile.prod  package-lock.json  package.json
Gemini_v2/gemx_web/: Dockerfile  main.py
config/: config.example.yaml
examples/: basic_usage.py  configuration_example.py
gemini/: __init__.py  __main__.py
gemini/cli/: __init__.py  main.py
gemini/core/: __init__.py  app.py  config.py
gemx_python/: README.md  pyproject.toml
gemx_python/src/gemx/: config.py  core.py  main.py  others.py
matheus_apple_med_dev_suite/: MANIFEST.json  Makefile  README.md  gemini.md
matheus_apple_med_dev_suite/macos/ssh_kit/medcli/: README_MEDCLI.md  pyproject.toml
matheus_apple_med_dev_suite/macos/ssh_kit/medcli/medcli/: __init__.py  __main__.py  card.py  ctgov.py  dicts.py  fhir.py  mdfhir.py  obsidian.py  openfda.py  plots.py  rxnorm.py
scripts/: setup.sh
tests/: __init__.py  test_ai_service.py  test_core.py
v2/: .env  .envrc  gemini.md  gemx-logs.sh  gemx-stats-html.py  gemx.sh  install-macos.sh  install-ubuntu.sh  install.sh  others.json  uninstall.sh
(+159 files in other folders)
