[project]
name = "medcli"
version = "0.1.0"
description = "Medical CLI: FHIR, OpenFDA, RxNorm, ClinicalTrials & Obsidian bridge"
authors = [{name="Matheus"}]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pandas>=2.2.2"
]

[project.scripts]
med = "medcli.__main__:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pandas>=2.2.2",
  "pyyaml>=6.0.1"
]
